[tool.poetry]
name = "suv"
version = "0.1.0"
description = ""
authors = ["Simon Riezebos <simon@datagiant.org>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.0.3"
plotly = "^4.6.0"
requests = "^2.23.0"
jupytext = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
